--- a/packages/@mcbe/lang/package.json
+++ b/packages/@mcbe/lang/package.json
@@ -1,27 +1,30 @@
 {
-    "name": "@mcbe/lang",
-    "version": "1.0.11",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
-    "license": "ISC",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/karikera/mcbe_modules"
-    },
-    "dependencies": {
-      "escape-string-regexp": "^2.0.0",
-      "@mcbe/ruakr_const": "^1.0.0",
-      "@mcbe/system_server": "^1.0.0",
-      "@mcbe/ruakr_util": "^1.0.0"
-    },
-    "peerDependencies": {
-      "@mcbe/system_shared": "1.x",
+  "name": "@mcbe/lang",
+  "version": "1.0.11",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/karikera/mcbe_modules"
+  },
+  "dependencies": {
+    "escape-string-regexp": "^2.0.0",
+    "@mcbe/ruakr_const": "^1.0.0",
+    "@mcbe/system_server": "^1.0.0",
+    "@mcbe/ruakr_util": "^1.0.0"
+  },
+  "peerDependencies": {
+    "@mcbe/system_shared": "1.x",
+    "@mcbe/identifier": "^1.x"
+  },
+  "devDependencies": {
+    "@mcbe/system_shared": "^1.0.0",
       "@mcbe/identifier": "^1.0.0"
-    }
   }
-  
+}
