--- a/packages/@mcbe/lang/package.json
+++ b/packages/@mcbe/lang/package.json
@@ -14,10 +14,10 @@
     "url": "https://github.com/karikera/mcbe_modules"
   },
   "dependencies": {
-    "escape-string-regexp": "^2.0.0",
     "@mcbe/ruakr_const": "^1.0.0",
+    "@mcbe/ruakr_util": "^1.0.0",
     "@mcbe/system_server": "^1.0.0",
-    "@mcbe/ruakr_util": "^1.0.0"
+    "escape-string-regexp": "^2.0.0"
   },
   "peerDependencies": {
     "@mcbe/system_shared": "1.x",
@@ -25,6 +25,6 @@
   },
   "devDependencies": {
     "@mcbe/system_shared": "^1.0.0",
-      "@mcbe/identifier": "^1.0.0"
+    "@mcbe/identifier": "^1.0.0"
   }
 }
